packages/specification/testing/fixtures/invalid/unresolved-symbol/app.prd
module billing {

  workflow create_invoice {

    writes {
      missing_entity
    }

  }

}
